<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable name="fragmentMovieDetails"
            type="com.serhat.moviedatabase.ui.view.fragment.MovieDetailsFragment" />

        <variable name="movie"
            type="com.serhat.moviedatabase.data.model.movie.Movie" />

        <variable name="adapterGenre"
            type="com.serhat.moviedatabase.ui.view.adapter.GenreAdapter" />

        <variable name="adapterMovie"
            type="com.serhat.moviedatabase.ui.view.adapter.MovieAdapter" />

        <variable name="showProgressBar"
            type="Boolean" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/frgMovieDetailsNestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.view.fragment.MovieDetailsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:id="@+id/frgMovieDetailsImgPoster"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        app:layout_constraintDimensionRatio="16:9"
                        tools:srcCompat="@tools:sample/backgrounds/scenic" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="32sp"
                    android:text="@{movie.title}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@{(movie.overview == null) ? @string/movie_hasnt_got_an_overview : movie.overview}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:text="@string/lbl_genres" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/frgMovieDetailsRvGenres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:adapter="@{adapterGenre}"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:scrollbars="horizontal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:text="@string/lbl_movie_details" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="2dp"
                            android:gravity="end"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/lbl_release_date" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:text="@{movie.release_date}" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="2dp"
                            android:gravity="end"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/lbl_status" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:text="@{movie.status}" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="2dp"
                            android:gravity="end"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/lbl_runtime" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:text="@{String.valueOf(movie.runtime)}" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="2dp"
                            android:gravity="end"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/lbl_vote_count" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:text="@{String.valueOf(movie.vote_count)}" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="2dp"
                            android:gravity="end"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/lbl_vote_average" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:text="@{String.valueOf(movie.vote_average)}" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="2dp"
                            android:gravity="end"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/lbl_original_language" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:text="@{movie.original_language.toUpperCase()}" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="2dp"
                            android:gravity="end"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/lbl_original_title" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:text="@{movie.original_title}" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="2dp"
                            android:gravity="end"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/lbl_budget" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:text="@{String.valueOf(movie.budget)}" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="2dp"
                            android:gravity="end"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/lbl_revenue" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:text="@{String.valueOf(movie.revenue)}" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="2dp"
                            android:gravity="end"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/lbl_adult" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:text="@{movie.adult ? @string/lbl_yes : @string/lbl_no}" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="16dp"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginBottom="4dp"
                android:text="@string/lbl_similar_movies" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/frgMovieDetailsRvSimilarMovies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:adapter="@{adapterMovie}" />

            <ProgressBar
                android:id="@+id/frgMovieDetailsProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{showProgressBar ? View.VISIBLE : View.GONE}" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>