<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="adapterMovie"
            type="com.serhat.moviedatabase.ui.view.adapter.MovieAdapter" />

        <variable name="movie"
            type="com.serhat.moviedatabase.data.model.movie.MovieSummary" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/cardMovieImgPoster"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxHeight="500dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                app:layout_constraintDimensionRatio="2:3"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@{movie.title}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text='@{(movie.overview.length > 100) ? movie.overview.substring(0, 100) + "..." : (movie.overview.isEmpty()) ? @string/movie_hasnt_got_an_overview : movie.overview}' />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="4dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="2dp"
                            android:gravity="end"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text="@string/lbl_release_date" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="16sp"
                            android:text="@{movie.release_date}" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="2dp"
                            android:gravity="end"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text="@string/lbl_vote_average" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="16sp"
                            android:text='@{movie.vote_average + " / 10"}' />
                    </TableRow>
                </TableLayout>

                <Button
                    android:id="@+id/cardMovieBtnNavToDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:onClick="@{() -> adapterMovie.navToMovieDetails(cardMovieBtnNavToDetails, movie.id)}"
                    style="@style/ButtonSmall"
                    android:text="@string/btn_see_movie_details" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>